# teleios

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMAKE_BUILD.md  CMakeLists.txt  README.md  SETUP.md  agregator.py  build.ps1  build.sh  build_all.ps1  string.c  string.h
.claude/: settings.local.json
docs/: Initialization.puml  Thread Diagram.puml
engine/: .clang-format  CMakeLists.txt  build.ps1  roadmap.md
engine/.claude/: settings.local.json
engine/include/glad/: glad.h
engine/include/teleios/: config.h  container.h  defines.h  filesystem.h  graphics.h  input.h  logger.h  renderer.h  scene.h  simulation.h  strings.h  teleios.h  thread.h
engine/src/include/teleios/: chrono.h  container.h  defines.h  graphics.h  graphics_geometry.inl  graphics_shader.inl  number.h  scene.h  script.h  strings.h  teleios.h  thread.h
engine/src/main/: main.c
engine/src/main/bks/: bks.h  bks_logger.c  bks_memory.c  bks_time.c  bks_trace.c  defines.h  logger.h  memory.h  time.h  trace.h
engine/src/main/flappy/: sandbox.c
engine/src/main/glad/: glad.c  khrplatform.h
engine/src/main/teleios/: application.c  application.h  chrono.h  config.c  config.h  console.h  container.c  container.h  container_iterator.c  container_list.c  container_map.c  container_pool.c  container_queue.c  container_types.inl  core.c  core.h  defines.h  event.c  event.h  filesystem.c  filesystem.h  global.h  globals.c  globals.h  graphics.c  graphics.h  graphics_queue.inl  graphics_thread.inl  graphics_types.inl  input.c  input.h  logger.c  logger.h  memory.c  memory.h  memory_dynamic.inl  memory_linear.inl  memory_types.inl  number.c  number.h  (+37 more)
engine/src/main/teleios/application/: application.c  application.h  engine.h  event.inl  loader.h
engine/src/main/teleios/config/: getters.inl  parser.inl
engine/src/main/teleios/container/: array.inl  array_iterator.inl  array_safe.inl  array_unsafe.inl  iterator.inl  list.inl  list_iterator.inl  list_safe.inl  list_unsafe.inl  map.inl  map_iterator.inl  map_safe.inl  map_unsafe.inl  pool.inl  pool_iterator.inl  pool_safe.inl  pool_unsafe.inl  queue.inl  queue_iterator.inl  queue_safe.inl  queue_unsafe.inl  types.inl
engine/src/main/teleios/core/: container.h  container_list.c  container_stack.c  event.c  event.h  graphics.c  graphics.h  libs.h  logger.c  logger.h  memory.h  meta.c  meta.h  number.h  platform.c  platform.h  platform_agnostic.c  platform_detector.h  platform_linux.c  platform_windows.c  profiler.c  profiler.h  script.h  serializer.c  serializer.h  string.c  string.h  time.h  types.h  ulid.c  ulid.h  utils.h
engine/src/main/teleios/core/container/: container_list.c  container_stack.c  list.h  map.h  queue.h  stack.h  tree.h  types.h
engine/src/main/teleios/core/event/: consumer.h  event.c  producer.h  types.h
engine/src/main/teleios/core/graphics/: geometry.h  graphics.c  primitive.h  shader.h  texture.h  types.h
engine/src/main/teleios/core/memory/: arena.h  memory.c  operator.h  types.h
engine/src/main/teleios/core/meta/: profiler.c  trace.c  trace.h
engine/src/main/teleios/core/platform/: audio.h  filesystem.h  input.h  memory.h  network.h  platform_agnostic.c  platform_linux.c  thread.h  time.h  window.h
engine/src/main/teleios/core/script/: scrpit.c
engine/src/main/teleios/core/utils/: logger.c  logger.h  serializer.c  serializer.h  string.c  types.h  ulid.c  ulid.h
engine/src/main/teleios/graphics/: cmdbuffer.inl  event.inl  geometry.inl  geometry_dsa.inl  geometry_ndsa.inl  queue.inl  shader.inl  thread.inl  types.inl  utils.inl
engine/src/main/teleios/memory/: dynamic.inl  linear.inl  types.inl
engine/src/main/teleios/number/: signed.inl  unsigned.inl
engine/src/main/teleios/platform/: glfw.inl  linux.inl  types.inl  windows.inl
engine/src/main/teleios/profiler/: types.inl
engine/src/main/teleios/runtime/: container.h  engine.c  engine.h  filesystem.h  input.c  input.h  layer.c  layer.h  libs.h  memory.h  scene.c  scene.h  script.h  serializer.c  serializer.h  shared.h  string.h  thread.h  types.h  ulid.h
engine/src/main/teleios/scene/: active.inl  lifecycle.inl  loader.inl  private.inl
engine/src/main/teleios/script/: input.inl  opengl.inl
engine/src/main/teleios/strings/: builder.inl  compare.inl  cstr.inl  factory.inl  search.inl  split.inl  transform.inl  type.inl
engine/src/main/teleios/system/: ecs.h  scene.h
engine/src/main/teleios/system/scene/: scene.c
engine/src/main/teleios/thread/: condition.inl  mutex.inl  thread.inl  types.inl  unix.inl
engine/src/teleios/: application.c  console.h  container.h  container_list.c  defines.h  logger.c  logger.h  main.c  memory.h  platform.h  platform_linux.c  string.c  window.h
engine/src/test/: CMakeLists.txt  main.c  test_container.c  test_event.c  test_framework.h  test_logger.c  test_main.c  test_memory.c  test_number.c  test_strings.c
engine/src/test/framework/: unity.h
sandbox/: CMakeLists.txt  application.yml  build.ps1
sandbox/assets/script/: test.lua
sandbox/assets/scripts/: environment.lua
sandbox/assets/shader/: basic.glsl
sandbox/flappy/: application.yaml
sandbox/pong/: application2.yaml
sandbox/scripts/main/: frame_end.lua  load.lua  unload.lua  xxxframe_begin.lua
sandbox/src/main/: main.c
src/main/: main.c
src/main/glad/: glad.h  khrplatform.h
src/main/libk/: collection.h  container.h  defines.h  kallocator.c  kcollection.c  kcontainer_iterator.c  kcontainer_list.c  kcontainer_map.c  kcontainer_stack.c  klogger.c  kmemory.c  knumber.c  kruntime.c  kstring.c  ktime.c  libk.h  logger.h  memory.h  number.h  runtime.h  string.h  time.h
src/main/teleios/: application.c  application.h  defines.h  filesystem.c  filesystem.h  runtime.c  runtime.h  teleios.h  yaml.c  yaml.h
